<resources>
    <string name="app_name">Pishtazan</string>

    <string name="enterNationalCode">کد ملی خود را وارد نمایید</string>
    <string name="getVerifyCode">دریافت کد</string>
    <string name="cancel">بیخیال</string>
    <string name="nationalCode">کد ملی</string>
    <string name="internetNotAvailable">اینترنت دستگاه خود را روشن کنید</string>
    <string name="pleaseWait">شکیبا باشید</string>
    <string name="pleaseWaitingForConnectingToServer">در حال برقراری ارتباط با مرکز</string>
    <string name="installApp">نصب نرم افزار</string>
    <string name="fileDownloaded">پایان بارگیری فایل</string>
    <string name="reTry">تلاش مجدد</string>
    <string name="logOut">خروج از حساب</string>
    <string name="editProfile">ویرایش پروفایل</string>
    <string name="chargeWallet">افزایش موجودی</string>
    <string name="newVersionIsAvailable">نسخه جدید برنامه در دسترس می باشد. تا بارگیری کامل فایل شکیبا باشید</string>
    <string name="enterVerify">شش رقم کد فعال سازی را وارد نمایید</string>
    <string name="elapsedTimeGetSMS">زمان باقیمانده\n برای دریافت پیامک</string>
    <string name="reTryGetSMS">دریافت مجدد</string>
    <string name="colleague">همکار</string>
    <string name="colleagues">همکاران</string>
    <string name="addColleague">اضافه کردن همکار</string>
    <string name="customer">مشتری</string>
    <string name="customers">مشتریان</string>
    <string name="addCustomer">اضافه کردن مشتری</string>
    <string name="doubleExit">برای خروج 2 بار کلیک کنید</string>
    <string name="tutorial">آموزش</string>
    <string name="reports">گزارشات</string>
    <string name="alarms">اعلانات</string>
    <string name="certain">قطعی</string>
    <string name="user">کاربر</string>
    <string name="maybe">بالقوه</string>
    <string name="possible">بالفعل</string>
    <string name="archives">بایگانی شده ها</string>
    <string name="archive">بایگانی</string>
    <string name="deleteFromArchive">بازگشت به لیست</string>
    <string name="home">خانه</string>
    <string name="noItemForShow">موردی برای نمایش وجود ندارد</string>
    <string name="actions">عملیات ها</string>
    <string name="close">بستن</string>
    <string name="fullName">نام و نام خانوادگی</string>
    <string name="sortByDegree">مرتب سازی بر اساس درجه</string>
    <string name="searchName">جستجوی نام</string>
    <string name="beDone">انجام شود</string>
    <string name="chooseFromContacts">انتخاب از بین مخاطبین</string>
    <string name="mobileNumber">تلفن همراه</string>
    <string name="giant">غول</string>
    <string name="peach">هلو</string>
    <string name="normal">عادی</string>
    <string name="ok">تایید</string>
    <string name="contactIsEmpty">لیست مخاطبین شما خالی است</string>
    <string name="searchNameOrNumber">جستجوی نام یا شماره</string>
    <string name="changeProfileImage">تغییر تصویر</string>
    <string name="changeDate">تغییر تاریخ</string>
    <string name="hintBirthDay">تاریخ تولد\n انتخاب نشده</string>
    <string name="birthDay">تاریخ تولد</string>
    <string name="phoneNumber">تلفن ثابت</string>
    <string name="chooseLocationOnMap">انتخاب آدرس روی نقشه</string>
    <string name="address">آدرس</string>
    <string name="sendSmsOnBirthday">ارسال پیام \n تبریک تولد</string>


    <string name="emptyMobileNumber">شماره تلفن همراه را کامل وارد نماید</string>
    <string name="emptyFullName">نام و نام خانوادگی را کامل وارد نمایید</string>
    <string name="emptyCustomerDegree">سطح مشتری را انتخاب نمایید</string>
    <string name="emptyColleagueDegree">سطح همکار را انتخاب نمایید</string>

    <string name="actionMoveToPossible">انتقال به بالفعل</string>
    <string name="actionCompleteInformation">تکمیل اطلاعات</string>
    <string name="actionCallsReminder">یادآوری تماس ها</string>
    <string name="actionMeetingsReminder">یادآوری جلسه ها</string>
    <string name="actionMoveToCustomerCertain">انتقال به قطعی</string>
    <string name="actionDrafts">لیست پیشنویس ها</string>
    <string name="actionInsurances">لیست بیمه نامه ها</string>
    <string name="actionMoveToColleagueCertain">انتقال به قطعی</string>

    <string name="completeInformation">تکمیل اطلاعات</string>
    <string name="setCallReminder">ثبت یادآوری تماس</string>
    <string name="setMeetingReminder">ثبت یادآوری جلسه</string>
    <string name="policiesList">لیست پیشنویس ها</string>
    <string name="insuranceList">لیست بیمه نامه ها</string>
    <string name="backToList">بازگشت به لیست</string>
    
    <string name="titleDialogDeletePerson">آیا برای بایگانی کردن</string>
    <string name="titleDialogDeletePersonOFArchive">آیا برای بازگردانی</string>
    <string name="titleDialogMovePerson">آیا برای انتقال</string>
    <string name="titleDialogAreYouShore">مطمئن هستید؟</string>

    //___________________________ Values For SharedPreference ______________________________________
    <string name="ML_SharePreferences">ML_SharePreferences</string>
    <string name="ML_FullName">ML_FullName</string>
    <string name="ML_PersonId">ML_PersonId</string>
    <string name="ML_Id">ML_Id</string>
    <string name="ML_ColleagueId">ML_ColleagueId</string>



    //___________________________________ Values For Argument ______________________________________
    <string name="ML_NationalCode">ML_NationalCode</string>
    <string name="ML_Verified">ML_Verified</string>
    <string name="ML_UpdateUrl">UpdateUrl</string>
    <string name="ML_AddPerson">ML_AddPerson</string>


</resources>