<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:orientation="horizontal"
        android:background="@drawable/dw_back_panel_type"
        android:padding="@dimen/_7sdp"
        >

        <LinearLayout
            android:id="@+id/LinearLayoutUser"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/_5sdp"
            android:orientation="horizontal"
            android:gravity="center"
            >

            <TextView
                fontPath="fonts/iransans_web_medium.ttf"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:textColor="@color/ML_Harmony"
                android:textSize="@dimen/_10sdp"
                android:gravity="center"
                android:text="@string/user"/>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayoutCertain"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/_5sdp"
            android:layout_marginLeft="@dimen/_5sdp"
            android:orientation="horizontal"
            android:gravity="center"
            >

            <TextView
                fontPath="fonts/iransans_web_medium.ttf"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:textColor="@color/ML_Harmony"
                android:textSize="@dimen/_10sdp"
                android:gravity="center"
                android:text="@string/certain"/>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayoutPossible"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/_5sdp"
            android:layout_marginLeft="@dimen/_5sdp"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                fontPath="fonts/iransans_web_medium.ttf"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:textColor="@color/ML_Harmony"
                android:textSize="@dimen/_10sdp"
                android:gravity="center"
                android:text="@string/possible"/>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayoutMaybe"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/_5sdp"
            android:background="@drawable/dw_back_panel_menu_type_selected"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                fontPath="fonts/iransans_web_medium.ttf"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:textColor="@color/ML_Harmony"
                android:textSize="@dimen/_10sdp"
                android:gravity="center"
                android:text="@string/maybe"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>