<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <data>
        <variable
            name="panel"
            type="ir.bppir.pishtazan.viewmodels.VM_Panel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/SwitchMaterialArchived"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Archives"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="gone"/>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:background="@drawable/dw_back_panel_type"
            android:orientation="horizontal"
            android:padding="@dimen/_7sdp"
            android:layout_marginLeft="@dimen/_3sdp"
            android:layout_marginRight="@dimen/_3sdp"
            android:layout_marginTop="@dimen/_3sdp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/SwitchMaterialArchived">

            <ir.mlcode.latifiarchitecturelibrary.customs.ML_Button
                android:id="@+id/ml_ButtonUser"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginRight="@dimen/_3sdp"
                android:layout_marginLeft="@dimen/_3sdp"
                app:connectBack="@drawable/dw_back_recycler"
                app:textColor="@color/colorPrimary"
                app:textValueSize="@dimen/_11sdp"
                app:textValue="@string/user"
                app:fontFamily="@font/vazir_medium"
                />


            <ir.mlcode.latifiarchitecturelibrary.customs.ML_Button
                android:id="@+id/ml_ButtonCertain"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginRight="@dimen/_3sdp"
                android:layout_marginLeft="@dimen/_3sdp"
                app:connectBack="@drawable/dw_back_recycler"
                app:textColor="@color/colorPrimary"
                app:textValueSize="@dimen/_11sdp"
                app:textValue="@string/certain"
                app:fontFamily="@font/vazir_medium"
                />

            <ir.mlcode.latifiarchitecturelibrary.customs.ML_Button
                android:id="@+id/ml_ButtonPossible"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginRight="@dimen/_3sdp"
                android:layout_marginLeft="@dimen/_3sdp"
                app:connectBack="@drawable/dw_back_recycler"
                app:textColor="@color/colorPrimary"
                app:textValueSize="@dimen/_11sdp"
                app:textValue="@string/possible"
                app:fontFamily="@font/vazir_medium"
                />


            <ir.mlcode.latifiarchitecturelibrary.customs.ML_Button
                android:id="@+id/ml_ButtonMaybe"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginRight="@dimen/_3sdp"
                android:layout_marginLeft="@dimen/_3sdp"
                app:connectBack="@drawable/dw_back_recycler"
                app:textColor="@color/colorPrimary"
                app:textValueSize="@dimen/_11sdp"
                app:textValue="@string/maybe"
                app:fontFamily="@font/vazir_medium"
                />


        </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewPanel"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_3sdp"
            android:layout_marginLeft="@dimen/_3sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textViewNoItemForShow"
            fontPath="font/iransans_web_medium.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/noItemForShow"
            android:textColor="@color/ML_Splash"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ir.mlcode.latifiarchitecturelibrary.customs.ML_Button
            android:id="@+id/ml_ButtonNew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_8sdp"
            app:connectBack="@drawable/dw_back_circle_accent"
            app:img_height="@dimen/_30sdp"
            app:img_src="@drawable/ic_add_button"
            app:img_tint="@color/colorPrimaryDark"
            app:img_width="@dimen/_30sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp" />


        <include
            android:id="@+id/constraintLayoutAction"
            layout="@layout/panel_action"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewNoItemForShow"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/_5sdp"
            android:visibility="gone"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
